Fix paths title spacing on homepage

--- a/hellopeoria/styles/style.scss
+++ b/hellopeoria/styles/style.scss
@@ -614,6 +614,10 @@ header {
 }
 
 .homepage {
+  .path-title {
+    margin-left: 20px;
+  }
+
   .card-wrapper.home {
     position: relative;
     flex-wrap: nowrap;
